--- a/PAIDE/src/main/res/values/strings.xml
+++ b/PAIDE/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     
     <string name="delete">Удалить</string>
     <string name="cancel">Отмена</string>
+    
+    <string name="processing_core_copyed_successful">processing-core.jar Успешно скопирован!</string>
+    <string name="processing_core_copyed_unsuccessful">Произошла ошибка при копировании processing-core.jar</string>
 </resources>
