--- a/PAIDE/src/main/res/values/strings.xml
+++ b/PAIDE/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">P-AIDE</string>
+    <string name="app_name">Processing A-IDE</string>
     <string name="app_version">v0.0.1a</string>
-    <string name="app_description">P-AIDE - мобильная IDE для программирования на языке Processing. Собирай и запускай скетчи!</string>
+    <string name="app_description">P-A-IDE - мобильная IDE для программирования на языке Processing. Собирай и запускай скетчи!</string>
     
     <string name="create_project">Создать проект</string>
     <string name="projects_list">Список проектов</string>
